--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,34 @@
 repos:
 -   repo: local
     hooks:
-    -   id: flake8
-        name: flake8
-        entry: poetry run flake8
+    -   id: nox
+        name: nox
+        entry: bash ./scripts/run_nox.sh
         language: system
         types: [python]
-    -   id: isort
-        name: isort
-        entry: poetry run isort --profile black .
-        language: system
-        types: [python]
-    -   id: black
-        name: black
-        entry: poetry run black .
-        language: system
-        types: [python]
-    -   id: pytest
-        name: pytest
-        entry: poetry run pytest
-        language: system
-        types: [python]
-    -   id: mypy
-        name: mypy
-        entry: poetry run mypy .
-        language: system
-        types: [python]
+        pass_filenames: false
+    # -   id: flake8
+    #     name: flake8
+    #     entry: poetry run flake8
+    #     language: system
+    #     types: [python]
+    # -   id: isort
+    #     name: isort
+    #     entry: poetry run isort --profile black .
+    #     language: system
+    #     types: [python]
+    # -   id: black
+    #     name: black
+    #     entry: poetry run black .
+    #     language: system
+    #     types: [python]
+    # -   id: pytest
+    #     name: pytest
+    #     entry: poetry run pytest --cov=. --cov-report html:coverage_reports --cov-branch
+    #     language: system
+    #     types: [python]
+    # -   id: mypy
+    #     name: mypy
+    #     entry: poetry run mypy .
+    #     language: system
+    #     types: [python]
