--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pytest-cov = "^4.1.0"
 mypy = "^1.7.1"
 nox = "^2023.4.22"
 pre-commit = "^3.5.0"
+asgi-lifespan = "^2.1.0"
 
 [tool.isort]
 profile = "black"
